hphp/hack/test/typecheck/array/disallow_darray_with_int_keys_where_varray_is_required.php
<?hh

/**
 * Be aware that:
 *
 *   array<int, string> <: array<string>
 *
 * But:
 *
 *   array<string> !<: array<int, string>
 *
 * This test is the analog of the above, but with darray and varray.
 */

function test(): varray<string> {
  return dict[0 => "tingley"];
}
